<resources>
    <string name="app_name">PhotoFeed</string>
    <string name="text_signin">Bejelentkezés</string>
    <string name="text_nothave_acc_then_register">Még nincs fiókja? Regisztráljon!</string>
    <string name="text_register">Regisztrálás</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_already_have_acc_sign_in">Van már fiókja? Jelentkezzen be!</string>
    <string name="text_type_username">Írja be a felhasználónevét!</string>
    <string name="text_type_password">Írja be a jelszavát!</string>
    <string name="text_registration_inprogress">Regisztrálás folyamatban...</string>
    <string name="text_signin_inprogress">Bejelentkezés folyamatban...</string>

    <string name="text_signout">Kijelentkezés</string>
    <string name="text_error_when_login">Hiba bejelentkezés közben!</string>
    <string name="text_photo_upload_progress">Kép feltölése folyamatban...</string>
    <string name="text_photo_upload_complete">Kép felöltése sikerült!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_friends">Barátaim</string>
    <string name="find_friend">Barát keresése</string>
    <string name="find">Keresés</string>
    <string name="delete">Törlés</string>
    <string name="text_there_is_no_username">Nincs ilyen felhasználó!</string>
    <string name="text_searching_friend">Barát keresése...</string>
    <string name="explanation_camera_permission">Engedély szükséges a kamerához!</string>
    <string name="exit">Mégsem</string>
    <string name="forward">Engedélyezés</string>
    <string name="dialogtitle_permission">Engedélykérés</string>
    <string name="text_photo_upload_error">Kép feltöltése sikertelen!</string>
    <string name="text_photo_upload_inprogress">Kép feltöltése folyamatban...</string>
    <string name="text_you_cant_add_yourself">Saját magadat nem tudod hozzáadni!</string>
    <string name="text_do_you_want_to_add_friend">Bejelölöd barátnak %s-t?</string>
    <string name="no">Nem</string>
    <string name="Igen">Igen</string>
    <string name="dialog_title_add_friend">Barát bejelölés</string>
    <string name="accept">Elfogad</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="text_write_comment">Írj ide kommentet!</string>
    <string name="text_loading_comments">Kommentek betöltése...</string>
    <string name="text_num_likes">%d likes</string>
    <string name="title_activity_likes">LikesActivity</string>
    <string name="text_downloading_likes">Like-ok letöltése...</string>
    <string name="text_photo_saving_inprogress">Kép mentése folyamatban...</string>
    <string name="error_while_saving_photo">Hiba a mentés közben!</string>
    <string name="text_saving_photo_successful">Mentés sikeres a photo_feed mappába!</string>
</resources>
