<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/margin_vertical"
    android:layout_marginLeft="@dimen/margin_horizontal"
    android:layout_marginRight="@dimen/margin_horizontal"
    tools:context="hu.boldizsartompe.photofeed.presenter.view.screens.main.friends.FriendFragment">

    <EditText
        android:id="@+id/et_friends_findfriend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/find_friend"/>

    <Button
        android:id="@+id/btn_friends_findfriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/my_friends"
        android:layout_gravity="center"
        android:textSize="@dimen/text_title_size"
        android:textColor="#000000"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_myfriends"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"/>

</LinearLayout>
