<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/margin_horizontal"
    android:layout_marginRight="@dimen/margin_horizontal"
    android:layout_marginTop="@dimen/margin_vertical"
    android:layout_marginBottom="@dimen/margin_vertical"
    android:orientation="vertical"
    tools:context="hu.boldizsartompe.photofeed.presenter.view.screens.login.LoginActivity">

    <TextView
        android:id="@+id/tv_register_text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/text_register"
        android:textSize="@dimen/text_title_size"
        android:layout_gravity="center"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_register_username"
        android:layout_below="@+id/tv_register_text_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/et_register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/text_username"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_register_password"
        android:layout_below="@+id/til_register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <EditText
            android:id="@+id/et_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/text_password"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_above="@+id/tv_register_gotologin"
        android:id="@+id/btn_register_register"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/text_register"
        android:textSize="25sp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tv_register_gotologin"
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/text_already_have_acc_sign_in"
        android:textSize="20sp"
        android:layout_gravity="center"/>

</RelativeLayout>
